--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>"Chris Henderson"</title>
+  <meta charset="UTF-8">
+  <title>Activity 1: Basic HTML Bio</title>
 </head>
+
 <body>
-    <img src="" alt="">
+
+  <h1>CHris Henderson</h1>
+
+  <img src="https://placehold.it/200x200" alt="Your Name">
+
+  <p>NO</p>
+  <p>I want a bit of privacy</p>
+
+  <ul>
+    <li><strong>Email:</strong> <a href="#">fake@gmail.com</a></li>
+    <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+    <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
+  </ul>
+
+  <table>
+    <tr>
+      <th>Books</th>
+      <th>Movies</th>
+      <th>Games</th>
+    </tr>
+    <tr>
+      <td>The Hobbit</td>
+      <td>Hot Fuzz</td>
+      <td>Dark Souls</td>
+    </tr>
+    <tr>
+      <td>The Name of the Wind</td>
+      <td>The Avengers</td>
+      <td>The Last of Us</td>
+    </tr>
+    <tr>
+      <td>The Girl With All the Gifts</td>
+      <td>The Matrix</td>
+      <td>Dragon Age: Origins</td>
+    </tr>
+  </table>
+
 </body>
+
 </html>
